[tool.poetry]
name = "warrant"
version = "0.7.0"
description = ""
authors = ["Martijn Wiekens <martijn@alexion.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.9"
envs = "^1.4"
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
requests = "^>=2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
