[tool.poetry]
name = "warrant"
version = "0.7.4"
description = ""
authors = ["Martijn Wiekens <martijn@alexion.nl>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
boto3 = ">=1.38.9"
envs = "^1.4"
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
requests = ">=2.32.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
