[tool.poetry]
name = "warrant"
version = "0.7.5"
description = ""
authors = ["Martijn Wiekens <martijn@alexion.nl>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
boto3 = ">=1.41.1"
envs = "^1.4"
python-jose = {extras = ["pycryptodome"], version = "^3.5.0"}
requests = ">=2.32.5"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
